:arrow_up: Upgrade dependencies